--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             </ul>
         </div>
     </nav>
-    <h1>Tony</h1>
+    <h1>Portfolio</h1>
+    <h1>Tony Özbey</h1>
 </body>
 
 </html>
