Text toegevoegd in de about me pagina

--- a/about-me.html
+++ b/about-me.html
@@ -33,8 +33,9 @@
             </ul>
         </div>
     </nav>
-    <h1>Portfolio</h1>
-    <h1>Tony Özbey</h1>
+    <h1 class="about-me">Hallo mijn naam is Tony en</h1>
+    <h1 class="about-me">ik doe de opleiding</h1>
+    <h1 class="about-me">software developer op ROC Mondriaan.</h1>
 </body>
 
 </html>
