--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="about me.html">Over mij</a>
+                    <a class="nav-link" href="about-me.html">Over mij</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Projecten</a>
@@ -33,8 +33,8 @@
             </ul>
         </div>
     </nav>
-    <h1>Portfolio</h1>
-    <h1>Tony Özbey</h1>
+    <h1 class="home">Portfolio</h1>
+    <h1 class="home">Tony Özbey</h1>
 </body>
 
 </html>
