Text in de pagina's meer naar beneden gedaan

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
         </div>
     </nav>
-    <h1 class="home">Portfolio</h1>
+    <h1 class="home class-one">Portfolio</h1>
     <h1 class="home">Tony Özbey</h1>
 </body>
 
