Code toegevoegd in project pagina

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="about-me.html">Over mij</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projecten</a>
+                    <a class="nav-link" href="projects.html">Projecten</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Portfolio</a>
