--- a/about-me.html
+++ b/about-me.html
@@ -22,7 +22,7 @@
                     <a class="nav-link  active" href="#">Over mij</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projecten</a>
+                    <a class="nav-link" href="projects.html">Projecten</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Portfolio</a>
