meer text toegevoegd in de about me pagina

--- a/about-me.html
+++ b/about-me.html
@@ -33,7 +33,11 @@
             </ul>
         </div>
     </nav>
-    <h1 class="about-me class-one">Hallo mijn naam is Tony en</h1>
+    <h1 class="about-me class-one class-two">Over Mij</h1>
+    <br>
+    <br>
+    <br>
+    <h1 class="about-me">Hallo mijn naam is Tony en</h1>
     <h1 class="about-me">ik doe de opleiding</h1>
     <h1 class="about-me">software developer op ROC Mondriaan.</h1>
 </body>
