class toegevoegd ("class-three") en text toegevoegd in de contact pagina

--- a/about-me.html
+++ b/about-me.html
@@ -33,13 +33,13 @@
             </ul>
         </div>
     </nav>
-    <h1 class="about-me class-one class-two">Over Mij</h1>
+    <h1 class="class-one class-two class-three">Over Mij</h1>
     <br>
     <br>
     <br>
-    <h1 class="about-me">Hallo mijn naam is Tony en</h1>
-    <h1 class="about-me">ik doe de opleiding</h1>
-    <h1 class="about-me">software developer op ROC Mondriaan.</h1>
+    <h1 class="class-three">Hallo mijn naam is Tony en</h1>
+    <h1 class="class-three">ik doe de opleiding</h1>
+    <h1 class="class-three">software developer op ROC Mondriaan.</h1>
 </body>
 
 </html>
