text toegevoegd in de contact pagina

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,11 @@
         </div>
     </nav>
     <h1 class="class-one class-two class-three">Contact</h1>
+    <br>
+    <br>
+    <br>
+    <h1 class="class-three">Je kunt mij contacteren op</h1>
+    <h1 class="class-three">mijn e-mail: 302415872@student.rocmondriaan.nl</h1>
 </body>
 
 </html>
