--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm">
-        <a class="navbar-brand ps-5" href="#">Home</a>
+    <nav class="navbar navbar-expand-sm navbar-color">
+        <a class="navbar-brand ps-5 color1" href=""><b>Home</b></a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
             aria-label="Toggle navigation"></button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="about-me.html">Over mij</a>
+                    <a class="nav-link color2" href="about-me.html"><b>Over mij</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="projects.html">Projecten</a>
+                    <a class="nav-link color2" href="projects.html"><b>Projecten</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="nav-link color2" href="portfolio.html"><b>Portfolio</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link color2" href="contact.html"><b>Contact</b></a>
                 </li>
             </ul>
         </div>
     </nav>
-    <h1 class="home class-one">Portfolio</h1>
-    <h1 class="home">Tony Özbey</h1>
+    <h1 class="home class-one color3">Portfolio</h1>
+    <h1 class="home color3">Tony Özbey</h1>
 </body>
 
 </html>
