--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="projects.html">Projecten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
+                    <a class="nav-link active" href="">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
