--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="about-me.html">Over mij</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Projecten</a>
+                    <a class="nav-link active" href="">Projecten</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
