about me pagina kleur gegeven

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link color2" href="about-me.html"><b>Over mij</b></a>
+                    <a class="nav-link color2" href="about-me.html">Over mij</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link color2" href="projects.html"><b>Projecten</b></a>
+                    <a class="nav-link color2" href="projects.html">Projecten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link color2" href="portfolio.html"><b>Portfolio</b></a>
+                    <a class="nav-link color2" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link color2" href="contact.html"><b>Contact</b></a>
+                    <a class="nav-link color2" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
