--- a/about-me.html
+++ b/about-me.html
@@ -11,35 +11,35 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm">
-        <a class="navbar-brand ps-5" href="index.html">Home</a>
+    <nav class="navbar navbar-expand-sm navbar-color">
+        <a class="navbar-brand ps-5 color1" href="index.html">Home</a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
             aria-label="Toggle navigation"></button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link  active" href="">Over mij</a>
+                    <a class="nav-link color2" href=""><b>Over mij</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="projects.html">Projecten</a>
+                    <a class="nav-link color2" href="projects.html">Projecten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="nav-link color2" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link color2" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <h1 class="class-one class-two class-three">Over Mij</h1>
+    <h1 class="class-one class-two class-three color3">Over Mij</h1>
     <br>
     <br>
     <br>
-    <h1 class="class-three">Hallo mijn naam is Tony en</h1>
-    <h1 class="class-three">ik doe de opleiding</h1>
-    <h1 class="class-three">software developer op ROC Mondriaan.</h1>
+    <h1 class="class-three color4">Hallo mijn naam is Tony en</h1>
+    <h1 class="class-three color4">ik doe de opleiding</h1>
+    <h1 class="class-three color4">software developer op ROC Mondriaan.</h1>
 </body>
 
 </html>
