contact pagina kleur gegeven

--- a/contact.html
+++ b/contact.html
@@ -11,34 +11,34 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm">
-        <a class="navbar-brand ps-5" href="index.html">Home</a>
+    <nav class="navbar navbar-expand-sm navbar-color">
+        <a class="navbar-brand ps-5 color1" href="index.html">Home</a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
             aria-label="Toggle navigation"></button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="about-me.html">Over mij</a>
+                    <a class="nav-link color2" href="about-me.html">Over mij</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="projects.html">Projecten</a>
+                    <a class="nav-link color2" href="projects.html">Projecten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="nav-link color2" href="portfolio.html">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="">Contact</a>
+                    <a class="nav-link color2" href=""><b>Contact</b></a>
                 </li>
             </ul>
         </div>
     </nav>
-    <h1 class="class-one class-two class-three">Contact</h1>
+    <h1 class="class-one class-two class-three color3">Contact</h1>
     <br>
     <br>
     <br>
-    <h1 class="class-three">Je kunt mij contacteren op</h1>
-    <h1 class="class-three">mijn e-mail: 302415872@student.rocmondriaan.nl</h1>
+    <h1 class="class-three color4">Je kunt mij contacteren op</h1>
+    <h1 class="class-three color4">mijn e-mail: 302415872@student.rocmondriaan.nl</h1>
 </body>
 
 </html>
