text toegevoegd aan portfolio pagina

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,15 @@
             </ul>
         </div>
     </nav>
+    <h1 class="class-one class-two class-three color3">Portfolio</h1>
+    <br>
+    <br>
+    <br>
+    <h1 class="class-three color4">Dit is de pagina over mijn portfolio.</h1>
+    <h1 class="class-three color4">Ik heb deze portfolio gemaakt voor een opdracht</h1>
+    <h1 class="class-three color4">voor schoolom over mijzelf te vertellen.</h1>
+    <h1 class="class-three color4">Op deze portfolio vind je ook mijn contact informatie en</h1>
+    <h1 class="class-three color4">ook andere projecten van mij.</h1>
 </body>
 
 </html>
