kleur toegevoegd aan portfolio pagina

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,24 +11,24 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm">
-        <a class="navbar-brand ps-5" href="index.html">Home</a>
+    <nav class="navbar navbar-expand-sm navbar-color">
+        <a class="navbar-brand ps-5 color1" href="index.html">Home</a>
         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
             aria-label="Toggle navigation"></button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
             <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="about-me.html">Over mij</a>
+                    <a class="nav-link color2" href="about-me.html">Over mij</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="projects.html">Projecten</a>
+                    <a class="nav-link color2" href="projects.html">Projecten</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="">Portfolio</a>
+                    <a class="nav-link color2" href=""><b>Portfolio</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link color2" href="contact.html">Contact</a>
                 </li>
             </ul>
         </div>
