img folder toegevoegd

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,7 @@
     <h1 class="class-three color4">voor schoolom over mijzelf te vertellen.</h1>
     <h1 class="class-three color4">Op deze portfolio vind je ook mijn contact informatie en</h1>
     <h1 class="class-three color4">ook andere projecten van mij.</h1>
+    <img src="" alt="">
 </body>
 
 </html>
