Hoger Lager toegevoegd in project pagina

--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,17 @@
         </div>
     </nav>
     <h1 class="class-one class-two class-three color3">Projecten</h1>
+    <br>
+    <br>
+    <br>
+    <h1 class="class-three color4">Dit zijn projecten die ik heb gemaakt</h1>
+    <div class="card">
+        <img class="card-img-top" src="img/HogerLager.png" alt="Title">
+        <div class="card-body">
+            <a target="_blank" href="projects/hoger-lager/index.html"><h4 class="card-title color2">Hoger-Lager</h4></a>
+            <p class="card-text color4">Het eerste project wat ik gemaakt heb.</p>
+        </div>
+    </div>
 </body>
 
 </html>
