Tic-Tac-Toe toegevoegd aan project pagina

--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,13 @@
             <p class="card-text color4">Het eerste project wat ik gemaakt heb.</p>
         </div>
     </div>
+    <div class="card">
+        <img class="card-img-top" src="img/Tic-Tac-Toe.png" alt="Title">
+        <div class="card-body">
+            <a target="_blank" href="projects/Tic-Tac-Toe/index.html"><h4 class="card-title color2">Tic-Tac-Toe</h4></a>
+            <p class="card-text color4">Dit is het tweede project dat  ik gemaakt heb.</p>
+        </div>
+    </div>
 </body>
 
 </html>
