Tekst toegevoegd aan home pagina

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
     <br>
     <br>
     <br>
-    <h1 class="class-three color4">Dit zijn projecten die ik heb gemaakt</h1>
+    <h1 class="class-three color4">Dit zijn projecten die ik heb gemaakt voor school</h1>
     <div class="card">
         <img class="card-img-top" src="img/HogerLager.png" alt="Title">
         <div class="card-body">
@@ -49,7 +49,7 @@
         <img class="card-img-top" src="img/Tic-Tac-Toe.png" alt="Title">
         <div class="card-body">
             <a target="_blank" href="projects/Tic-Tac-Toe/index.html"><h4 class="card-title color2">Tic-Tac-Toe</h4></a>
-            <p class="card-text color4">Dit is het tweede project dat  ik gemaakt heb.</p>
+            <p class="card-text color4">Dit is het tweede project dat ik gemaakt heb.</p>
         </div>
     </div>
 </body>
