--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     </nav>
     <h1 class="home class-one color3">Portfolio</h1>
     <h1 class="home color3">Tony Özbey</h1>
+    <br>
+    <br>
+    <br>
+    <h1 class="class-three color4">Welkom op mijn portfolio website!</h1>
 </body>
 
 </html>
