Sitemap toegevoegd aan portfolio pagina

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,12 @@
     <h1 class="class-three color4">Kleurenschema van mijn portfolio</h1>
     <br>
     <img class="img-one" src="img/Kleurschema portfolio.png">
-    
+    <br>
+    <br>
+    <br>
+    <h1 class="class-three color4">Sitemap van mijn portfolio</h1>
+    <br>
+    <img class="img-two" src="img/Sitemap.png">
 </body>
 
 </html>
