tekst toegevoegd aan hoger lager in de project pagina

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
         <img class="card-img-top" src="img/HogerLager.png" alt="Title">
         <div class="card-body">
             <a target="_blank" href="projects/hoger-lager/index.html"><h4 class="card-title color2">Hoger-Lager</h4></a>
-            <p class="card-text color4">Het eerste project wat ik gemaakt heb.</p>
+            <p class="card-text color4">Het eerste project wat ik gemaakt heb met javascript, html en css. Met het maken van dit project heb ik geleert om met alerts en knoppen te werken.</p>
         </div>
     </div>
     <div class="card">
