tekst toegevoegd aan tic-tac-toe in de project pagina

--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
         <img class="card-img-top" src="img/Tic-Tac-Toe.png" alt="Title">
         <div class="card-body">
             <a target="_blank" href="projects/Tic-Tac-Toe/index.html"><h4 class="card-title color2">Tic-Tac-Toe</h4></a>
-            <p class="card-text color4">Dit is het tweede project dat ik gemaakt heb.</p>
+            <p class="card-text color4">Dit is het tweede project dat ik heb gemaakt met javascript, html en css. Tijdens het maken van dit project hep ik geleerd te werken met querySelector en localStorage</p>
         </div>
     </div>
 </body>
