tekst aangepast in portfolio pagina

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,9 +38,9 @@
     <br>
     <br>
     <h1 class="class-three color4">Dit is de pagina over mijn portfolio.</h1>
-    <h1 class="class-three color4">Ik heb deze portfolio gemaakt voor een opdracht</h1>
+    <h1 class="class-three color4">Ik heb dit portfolio gemaakt voor een opdracht</h1>
     <h1 class="class-three color4">voor school om over mijzelf te vertellen.</h1>
-    <h1 class="class-three color4">Op deze portfolio vind je ook mijn contact informatie en</h1>
+    <h1 class="class-three color4">Op dit portfolio vind je ook mijn contact informatie en</h1>
     <h1 class="class-three color4">ook andere projecten van mij.</h1>
     <br>
     <br>
