Naam van img veranderd

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
     <br>
     <h1 class="class-three color4">Kleurenschema van mijn portfolio</h1>
     <br>
-    <img class="img-one" src="img/Kleurschema portfolio.png">
+    <img class="img-one" src="img/Kleurschema_portfolio.png">
     <br>
     <br>
     <br>
