--- a/portfolio.html
+++ b/portfolio.html
@@ -47,13 +47,13 @@
     <br>
     <h1 class="class-three color4">Kleurenschema van mijn portfolio</h1>
     <br>
-    <img class="img-one" src="img/Kleurschema_portfolio.png">
+    <img class="img-one" src="img/Kleurschema_portfolio.png" alt="">
     <br>
     <br>
     <br>
     <h1 class="class-three color4">Sitemap van mijn portfolio</h1>
     <br>
-    <img class="img-two" src="img/Sitemap.png">
+    <img class="img-two" src="img/Sitemap.png" alt="">
 </body>
 
 </html>
