Buttons toegevoegd aan home pagina

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <br>
     <br>
     <h1 class="class-three color4">Welkom op mijn portfolio website!</h1>
+    <button class="button navbar-color"><a href="about-me.html" class="color2">Over mij</a></button>
+    <button class="button navbar-color"><a href="projects.html" class="color2">Projecten</a></button>
+    <button class="button navbar-color"><a href="portfolio.html" class="color2">Portfolio</a></button>
+    <button class="button navbar-color"><a href="contact.html" class="color2">Contact</a></button>
 </body>
 
 </html>
